--- a/ngapp/src/app/nav-bar/resources/resources.component.html
+++ b/ngapp/src/app/nav-bar/resources/resources.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2> ***Stories are currently down for maintenance*** </h2>
   <div class="header">
     {{ts.l.resources}}
   </div>
