--- a/ngapp/src/app/teacher/teacher-student/teacher-student.component.html
+++ b/ngapp/src/app/teacher/teacher-student/teacher-student.component.html
@@ -22,14 +22,14 @@
         <div class="classBody" *ngIf="!viewNoFeedback">
           <div class="classroomCard" *ngFor="let story of stories" (click)="goToStory(story._id)">
             <div class="storyTitle">{{story.title}}</div>
-            <div> {{story.lastUpdated | date:'MMMM dd,  yyyy h:mm aa' }} </div>
+            <div> {{story.updatedAt | date:'MMMM dd,  yyyy h:mm aa' }} </div>
             <div><i class="fas fa-arrow-right arrow"></i></div>
           </div>
         </div>
         <div class="classBody" *ngIf="viewNoFeedback">
           <div class="classroomCard" *ngFor="let story of storiesWithoutFeedback" (click)="goToStory(story._id)">
             <div class="storyTitle">{{story.title}}</div>
-            <div> {{ story.lastUpdated | date:'MMMM dd,  yyyy h:mm aa' }} </div>
+            <div> {{ story.updatedAt | date:'MMMM dd,  yyyy h:mm aa' }} </div>
             <div><i class="fas fa-arrow-right arrow"></i></div>
           </div>
         </div>
