--- a/ngapp/src/app/nav-bar/team/team.component.html
+++ b/ngapp/src/app/nav-bar/team/team.component.html
@@ -98,6 +98,23 @@
       </mat-card-content>
       </div>
     </mat-card>
+
+    <!-- Sarah -->
+    <div class="headerTitle" style="padding-top:20px"> {{ts.l.meet_the_artist}} </div><br>
+    <!-- Sarah Rooney -->
+    <mat-card>
+      <div class="developerCard">
+      <mat-card-content>
+        <div>
+          <div class="name"><b>Sarah Rooney</b></div>
+          <img src="assets/img/sarah.png" class="annaImg" alt="Sarah Rooney">
+        </div>
+      </mat-card-content>
+      <mat-card-content>
+        <div class="bio">{{ts.l.sarah_bio}}</div>
+      </mat-card-content>
+      </div>
+    </mat-card>
     
     <!-- Abair  -->
     <div class="headerTitle" style="padding-top:20px"> {{ts.l.meet_the_abair_team}} </div><br>
