--- a/ngapp/src/app/nav-bar/team/team.component.scss
+++ b/ngapp/src/app/nav-bar/team/team.component.scss
@@ -19,7 +19,7 @@
 
 .neasaImg {
   width: 200px;
-  height: 220px;
+  height: 230px;
   padding: 5px;
 }
 
@@ -43,7 +43,14 @@
 
 .annaImg {
   width: 200px;
-  height: 210px;
+  height: 250px;
+  padding: 5px;
+  padding-right: 20px;
+}
+
+.sarahImg {
+  width: 200px;
+  height: 200px;
   padding: 5px;
   padding-right: 20px;
 }
