--- a/ngapp/src/app/student/bat-mirialta-drawer/bat-mirialta-drawer.component.html
+++ b/ngapp/src/app/student/bat-mirialta-drawer/bat-mirialta-drawer.component.html
@@ -1,12 +1,13 @@
-<div class="batmirialtaHeader">
-  <div>
-    {{ ts.l.batmirialta }}
-    An Bat Mírialta
+<div class="group">
+  <div class="batmirialtaHeader">
+    <div>
+      {{ ts.l.batmirialta }}
+      An Bat Mírialta
+    </div>
+    <div class="closeBatmirialtaBtn" (click)="closeEmitter.next(true)">
+      <i class="fa fa-times"></i>
+    </div>
   </div>
-  <div class="closeBatmirialtaBtn" (click)="closeEmitter.next(true)">
-    <i class="fa fa-times"></i>
-  </div>
+  <iframe src="https://bat-mirialta.abair.ie"  frameborder="0">
+  </iframe>
 </div>
-<iframe src="https://bat-mirialta.abair.ie"  frameborder="0" style="overflow: hidden; height: 100%;
-        width: 100%; position: absolute;">
-</iframe>
