DR Create Story API call not working
Attempted to start integrating creating Digital Reader Stories via the An Scéalaí API and Mongoose

--- a/ngapp/src/app/nav-bar/digital-reader/digital-reader.component.html
+++ b/ngapp/src/app/nav-bar/digital-reader/digital-reader.component.html
@@ -53,7 +53,7 @@
             (click)="getHtmlDoc()"
             [disabled]="!this.htmlFolder"
             >*Test* Unzip the file</button> <br> <br>
-            <div class="viewStoryBtn">Create</div>
+            <div class="viewStoryBtn" (click)="createNewStory()">Create</div>
           </div>
         </mat-action-row>
       </mat-expansion-panel>
