--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -45,6 +45,7 @@
     <mat-menu #LARA="matMenu">
       <a mat-menu-item class="dropdownMenuItem" routerLink="/about-lara"> {{ ts.l.what_is_LARA }}</a >
       <a mat-menu-item class="dropdownMenuItem" routerLink="/resources">{{ ts.l.irish_stories }}</a>
+      <a mat-menu-item class="dropdownMenuItem" routerLink="/digital-reader">{{ ts.l.digital_reader }}</a>
     </mat-menu>
 
     <!-- Cen Scéal dropdown menu-->
