Refactored the role-guard-service to take in an Array of roles
Did this so as to allow both teachers and admins to have access to a navbar component without letting students access it. The alternative is to embed the component in both the teacher and admin modules but this approach seems preferable

--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -45,7 +45,9 @@
     <mat-menu #LARA="matMenu">
       <a mat-menu-item class="dropdownMenuItem" routerLink="/about-lara"> {{ ts.l.what_is_LARA }}</a >
       <a mat-menu-item class="dropdownMenuItem" routerLink="/resources">{{ ts.l.irish_stories }}</a>
-      <a mat-menu-item class="dropdownMenuItem" routerLink="/digital-reader">{{ ts.l.digital_reader }}</a>
+      <a
+      *ngIf="auth.isLoggedIn() && (auth.getUserDetails()?.role === 'TEACHER' || auth.getUserDetails()?.role === 'ADMIN')"
+      mat-menu-item class="dropdownMenuItem" routerLink="/dr-story-create">{{ ts.l.dr_story_create }}</a>
     </mat-menu>
 
     <!-- Cen Scéal dropdown menu-->
