--- a/ngapp/src/app/dialogs/basic-dialog/basic-dialog.component.html
+++ b/ngapp/src/app/dialogs/basic-dialog/basic-dialog.component.html
@@ -46,6 +46,15 @@
       </select>
       <br /><br />
     </div>
+    <!-- create-dr-story -->
+    <div *ngIf="data?.type == 'create-dr-story'">
+      {{ data.data[2][0] }}:
+      <input type="text" class="titleInput" placeholder="{{ data.data[0] }}" name="title" [(ngModel)]="textInputs[0]" /><br /><br />
+      {{ data.data[2][1] }}:
+      <div class="dialectContainer">
+        <mat-checkbox *ngFor="let opt of data.data[1]" [(ngModel)]="textInputs[opt.ind]"><div class="viewStoryBtn" >{{ opt.dialect }}</div></mat-checkbox>
+      </div>
+    </div>
     <!-- PDF -->
     <pdf-viewer *ngIf="data?.type == 'PDF'" [src]="data.data" [render-text]="true" [original-size]="false" style="width: 100%; height: 600px" ></pdf-viewer>
 
